@@ -1,4 +1,5 @@
 HEAD
+    + Added master configuration key to set the IP of the master
     + Added finalConfigurations method to ANSTE::Image::Commands
     + Added ANSTE::Virtualizer::OpenStack with partial support
     + Added useOpenStack and setUseOpenStack to Anste::Status
